--- a/ar/vr.html
+++ b/ar/vr.html
@@ -5,6 +5,14 @@
     <title>VR Scene</title>
     <meta name="description" content="A-Frame VR Example">
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
+    <style>
+button {
+    position: absolute;
+    top: 20px;
+}      
+  
+
+    </style>
   </head>
   <body>
     <a-scene embedded>
