--- a/ar/vr.html
+++ b/ar/vr.html
@@ -16,11 +16,18 @@ button {
   </head>
   <body>
     <a-scene embedded>
-      <a-box position="0 1 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="2 1 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+
+<!-- Lights -->
+      <a-entity light="type: ambient; intensity: 0.5"></a-entity>
+      <a-entity light="type: directional; intensity: 0.8; castShadow: true" position="2 4 3"></a-entity>
+
       <a-gltf-model src="https://portaltest.deceuninck.com/3d-models/window3.glb" position="0 0 -3" scale="1 1 1"></a-gltf-model>
+
+      <!-- Ground plane -->
       <a-plane position="0 0 -4" rotation="-90 0 0" width="10" height="10" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+
+            
+      
       <a-camera position="0 1.6 0"></a-camera>
     </a-scene>
   </body>
